#8: fix css & jump

--- a/src/gargantua/static/less/post.less
+++ b/src/gargantua/static/less/post.less
@@ -19,14 +19,6 @@
         }
     }
 
-    .comment-count {
-        text-align: center;
-        a {
-            color: #f6f7d0;
-            margin-left: 150px;
-        }
-    }
-
     .post-content {
         line-height: 150%;
     }
@@ -34,6 +26,10 @@
     .post-tail {
         text-align: right;
         margin-right: 30px;
+        a {
+            color: #f6f7d0;
+            margin-left: 150px;
+        }
     }
 
     .icon-star {
